--- a/FrontEnd/src/app/admin/admin.component.html
+++ b/FrontEnd/src/app/admin/admin.component.html
@@ -226,7 +226,7 @@
             </div>
 
             <br>
-            
+
 
             <a class="btn btn-outline-primary btn-user btn-block" (click)="aprobarProducto()">
               Aprobar
@@ -260,7 +260,7 @@
               <div class="col-sm">
                 <label for="tipoDeCobroSelect">Tipo de cobro</label>
                 <select class="form-control form-control-user" id="tipoDeCobroSelect"></select>
-              </div>  
+              </div>
             </div>
 
             <a class="btn btn-outline-primary btn-user btn-block" (click)="generarReporte()">
@@ -275,7 +275,7 @@
               </div>
             </div>
 
-            <a class="btn btn-outline-primary btn-user btn-block">
+            <a class="btn btn-outline-primary btn-user btn-block" (click)="imprimirReporte()">
               Generar PDF
             </a>
 
