--- a/FrontEnd/src/app/reporte/reporte.component.html
+++ b/FrontEnd/src/app/reporte/reporte.component.html
@@ -47,7 +47,7 @@
               </div>
             </div>
 
-            <div id="tabla"></div>
+            <div id="tabla" class="letra"></div>
 
 
           </div>
