--- a/FrontEnd/src/app/reporte/reporte.component.css
+++ b/FrontEnd/src/app/reporte/reporte.component.css
@@ -12,7 +12,7 @@ body{margin-top:20px;
   text-transform: uppercase!important;
   font-weight: 500!important;
   letter-spacing: 2px!important;
-  font-size: .85rem!important;
+  font-size: 8px!important;
 }
 .hover-lift-light {
   transition: box-shadow .25s ease,transform .25s ease,color .25s ease,background-color .15s ease-in;
@@ -91,4 +91,8 @@ tbody, td, tfoot, th, thead, tr {
 .svg-icon>svg {
   width: 1.45rem;
   height: 1.45rem;
+}
+
+.letra{
+  font-size: 10px;
 }
